samples/_failures_safe/1761348035_322497_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30c1f852.c: In function ‘tokenize’:
./samples/SAFE/__tmp_30c1f852.c:165:5: error: expected declaration or statement at end of input
  165 |     }
      |     ^
